tests/miniJava/neg/004489_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( length int [] java ) { return 0 ; } }
